# zbot_rl

./: .gitignore  CMakeLists.txt  build_Motor_test.sh
can/: usb_can.h
csv_plot_py/: plot_data.py  test.py
figures_data/data/: 1206_real_qpv.csv  1206_real_qpv01.csv  1206_real_qpv02.csv  1206_real_qpv03_p20d2.csv  1206_real_qpv04_p20d2.csv  delete.csv  log_rx_0.csv  log_rx_202.csv  log_rx_505.csv  log_strategy_0.csv  log_strategy_1.csv  log_strategy_2.csv  obs_env0.csv  obs_env0_pos_vel.csv  obs_env0_quat_pos_vel.csv  pd_real.csv
figures_data/data/motor_test/: motor_test_RX_20251217_154720_000.csv  motor_test_RX_20251217_154838_000.csv  motor_test_RX_20251217_155048_000.csv  motor_test_RX_20251217_155621_000.csv  motor_test_RX_20251217_155747_000.csv  motor_test_RX_20251217_155914_000.csv  motor_test_RX_20251217_160051_000.csv  motor_test_RX_20251217_160212_000.csv  motor_test_TX_20251217_154720_000.csv  motor_test_TX_20251217_154838_000.csv  motor_test_TX_20251217_155048_000.csv  motor_test_TX_20251217_155621_000.csv  motor_test_TX_20251217_155747_000.csv  motor_test_TX_20251217_155914_000.csv  motor_test_TX_20251217_160051_000.csv  motor_test_TX_20251217_160212_000.csv
figures_data/data/obs_env_1204/: obs_env0.csv
figures_data/data/obs_env_csv1219/: v2_1_obs_env0.csv  v2_obs.csv  v2_obs_imuposvel.csv
include/: Hipnuc_IMU.h  Motor_test.h  RS_motor.h  Zbot_RL.h
src/: Hipnuc_IMU.cpp  Motor_test.cpp  RS_motor.cpp  Tangair_usb2can.cpp  Zbot_RL.cpp  can_node.cpp
